frontend/src/styles/auth.css
/* ... */
.authPage .baseImg {
  position: absolute;
  left: 9rem;
  /* width: 60%; */
  height: 100%;
  object-fit: contain;
  /* scale: 1.65; */
  rotate: 10deg;
}

.authPage .form-container {
  display: flex;
  background-color: rgb(236, 234, 234);
  width: 62rem;
  height: 80%;
  border-radius: 30px;
  padding: 20px;
  z-index: 10;
  box-shadow:
    0 0 12px black,
    0 0 30px black,
    0 0 60px black;
}

.authPage .form-container .form-left {
  width: 30rem;
  height: 100%;
  overflow: hidden;
  border-radius: 20px;
  box-shadow:
    0 0 2px white,
    0 0 3px white,
    0 0 6px white;
}

.form-image {
  /* padding: 20px; */
  object-fit: contain;
  height: 100%;
  scale: 1.3;
  border-radius: 20px;
}

.form-container .form-right {
  position: relative;
  width: 30rem;
  height: 100%;
  color: black;
  padding: 20px;

}

.form-container .form-right .top {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.form-container .form-right .top h2 {
  color: #474747;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 800;
  font-size: 24px;
}

.form-container .form-right .top select {
  background: none;
  border-radius: 20px;
  padding-block: 5px;
  padding-inline: 5px;
  outline: none;
}

.form-container .form-right section {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 30px;
  justify-content: center;
  align-items: center;
  /* background-color: red; */
  height: 100%;
}

.form-container .form-right section .form-header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 5px;
}

.form-container .form-right section .form-header h2 {
  font-size: 50px;
}

.form-container .form-right section .form-header p {
  font-size: 15px;
  font-weight: 500;
}

.form-container .form-right section .form {
  /* background-color: red; */
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.form-container .form-right section .form .inputBox {
  width: 320px;
  display: flex;
  flex-direction: column;
}

.form-container .form-right section .form .inputBox input {
  width: 100%;
  padding: 12px 14px;
  font-size: var(--text-size-md);
  border-radius: 10px;
  border: 2px solid rgba(2, 6, 23, 0.08);
  background: none;
  color: black;
  outline: none;
}

.form-container .form-right section .form .actions {
  display: flex;
  flex-direction: column;
}

.form-container .form-right section .form .actions .btn {
  width: 320px;
  padding: 12px 14px;
  background-color: #e60022;
  border-radius: 50px;
  color: #ddd9d9;
}

/* extra styles for signup form */

.form-container .form-right section .form .inputBoxesWrapper {
  overflow-y: scroll;
  height: 300px;
  padding-inline: 30px;
  display: flex;
  flex-direction: column;
  gap: 12px;
  /* background-color: red; */
}

.form-container .form-right section .form .inputBoxesWrapper::-webkit-scrollbar {
  width: 12px;
}

.form-container .form-right section .form .inputBoxesWrapper::-webkit-scrollbar-track {
  background: #9b9a9a;
  border-radius: 20px;
}

.form-container .form-right section .form .inputBoxesWrapper::-webkit-scrollbar-thumb {
  background-color: #d96e26;
  border-radius: 20px;
}

.form-container .form-right section .form .inputBox textarea {
  background: none;
  width: 100%;
  padding: 12px 14px;
  font-size: var(--text-size-md);
  border-radius: 10px;
  border: 2px solid rgba(2, 6, 23, 0.08);
  background: none;
  color: black;
  outline: none;
  scrollbar-width: thin;
}

.authPage .form-container .form-right .errorBanner {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: 12%;
  width: 350px;
  height: 60px;
  background-color: #ebd3c7;
  border-radius: 8px;
  display: flex;
  align-items: center;
  padding-inline: 20px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  gap: 20px;
  overflow: hidden;
}

.authPage .form-container .form-right .errorBanner .error {
  display: flex;
  flex-direction: column;
  color: #e91938;
}

.authPage .form-container .form-right .errorBanner .error h5 {
  font-weight: 700;
  font-size: larger;
}

.authPage .form-container .form-right .errorBanner .error p {
  font-size: small;
}

.authPage .form-container .form-right .errorBanner .errorLine {
  background-color: crimson;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 3px;
  animation: shrink-progress 5s linear forwards;
  transition: ease-in-out;
}

@keyframes shrink-progress {
  0% {
    width: 100%;
  }

  100% {
    width: 0%;
  }
}

@media (max-width: 920px) {
  .authPage .form-container {
    width: 90%;
    height: 90%;
    padding: 20px;
    border-radius: 10px;
  }

  .authPage .form-container .form-left {
    display: none;
  }

  .authPage .form-container .form-right {
    width: 100%;
    height: 100%;
    padding: 10px;
  }

  .authPage .form-container .form-right .formPane {
    gap: 3rem;
  }
}
.psw_info{
  font-size: 0.75rem;   
  line-height: 1rem;    
  color: #9ca3af;         
  margin-top: 0.375rem;
}

